[tool.poetry]
name = "doorkeeper"
version = "0.1.0"
description = ""
authors = ["yastcher <yastcher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.3"
Django = "^4.0.2"
Pillow = "^9.0.1"
numpy = "^1.22.3"
face-recognition = "^1.3.0"
dlib = "^19.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-django = "^4.5.2"
pytest-pycharm = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
